src/test/resources/Parser/SyntaxErrors/UntypedFunctionAddress.front
class A:
    static generic <T,R> (T t, R r) {}

    test () {
        x := generic*;
    }